# RLSimulationTesting

./: gym_gazebo_env.py  ppo.py  rl_agent.py
install/: local_setup.sh  setup.sh
install/my_gazebo_simulation/lib/my_gazebo_simulation/: custom_turtlebot_env.py  train_trpo_turtlebot.py
install/my_gazebo_simulation/share/my_gazebo_simulation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_gazebo_simulation/share/my_gazebo_simulation/launch/: my_custom_world.launch.py
log/: latest_build
logs/: episode_rewards.csv  events.out.tfevents.1741587701.BigAJ.37323.0  events.out.tfevents.1741587701.BigAJ.37323.1  events.out.tfevents.1741588276.BigAJ.39604.0  events.out.tfevents.1741588276.BigAJ.39604.1  events.out.tfevents.1741588926.BigAJ.42106.0  events.out.tfevents.1741588926.BigAJ.42106.1  events.out.tfevents.1741589292.BigAJ.43951.0  events.out.tfevents.1741589292.BigAJ.43951.1  events.out.tfevents.1741590248.BigAJ.47793.0  events.out.tfevents.1741590248.BigAJ.47793.1  events.out.tfevents.1741593350.BigAJ.1377.0  events.out.tfevents.1741593350.BigAJ.1377.1  events.out.tfevents.1741675788.BigAJ.3699.0  events.out.tfevents.1741675788.BigAJ.3699.1
src/my_gazebo_simulation/: CMakeLists.txt  setup.py  train_trpo_simulation.sh
src/my_gazebo_simulation/launch/: my_custom_world.launch.py
src/my_gazebo_simulation/models/NewSimpleENV/: model.config  model.sdf
src/my_gazebo_simulation/my_gazebo_scripts/: custom_turtlebot_env.py  train_trpo_turtlebot.py
src/my_gazebo_simulation/worlds/: RLTestingENV
(+2 files in other folders)
